--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crud_basic",
+    "name": "mysql_crud_basic",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
